Fixing an overflow issue with the menu bar

--- a/src/components/Menu/menu.css
+++ b/src/components/Menu/menu.css
@@ -4,10 +4,13 @@
 
 
 .menu-navbar {
-    overflow: hidden;
+    /* overflow: hidden; */
     top: 0;
     position: fixed;
-    width: 100%;
+    width: calc(100vw - 20px);
+    /* width: auto; */
+    /* max-width: 100%; */
+    /* padding-left: auto; */
 
     height: var(--menu-nav-size);
     background-color: var(--menu-bg);
